--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@panelbear/panelbear-nextjs": "^1.0.3",
     "next": "11.1.2",
     "next-sitemap": "^1.6.133",
     "react": "17.0.2",
