--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@panelbear/panelbear-nextjs": "^1.0.3",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "next-sitemap": "^1.6.133",
     "react": "17.0.2",
