--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@panelbear/panelbear-nextjs": "^1.0.3",
+    "ioredis": "^4.28.5",
     "moment": "^2.29.1",
     "next": "11.1.2",
     "next-sitemap": "^1.6.133",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "redis": "^4.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
